# forge-cli-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/getting-started/: README.md
docs/reference/: architecture.md  conformance-testing.md  contract-parsing.md  role-taxonomy.md
docs/walkthrough/: build-a-validator.md  plug-into-fluid-cli.md  your-first-real-plugin.md
examples/: README.md
examples/gitlab-ci-scaffold/: README.md  demo.py  pyproject.toml
examples/gitlab-ci-scaffold/src/gitlab_ci_scaffold/: __init__.py  scaffold.py
examples/gitlab-ci-scaffold/tests/: test_scaffold.py
examples/hello-scaffold/: README.md  demo.py  pyproject.toml
examples/hello-scaffold/src/hello_scaffold/: __init__.py  scaffold.py
examples/hello-scaffold/tests/: test_scaffold.py
examples/steward-validator/: README.md  demo.py  pyproject.toml
examples/steward-validator/src/steward_validator/: __init__.py  validator.py
examples/steward-validator/tests/: test_validator.py
src/fluid_provider_sdk/: __init__.py  actions.py  base.py  capabilities.py  contract.py  hooks.py  metadata.py  types.py  version.py
src/fluid_provider_sdk/testing/: __init__.py  fixtures.py  harness.py
src/fluid_sdk/: __init__.py  action.py  base.py  capabilities.py  contract.py  discovery.py  domains.py  error.py  metadata.py  result.py  version.py
src/fluid_sdk/roles/: __init__.py  catalog_adapter.py  custom_scaffold.py  infra_provider.py  validator.py
src/fluid_sdk/testing/: __init__.py  fixtures.py  harness.py  role_harnesses.py  snapshot.py
tests/unit/: test_action.py  test_compat.py  test_contract_helper.py  test_contract_helper_id_fallback.py  test_custom_scaffold.py  test_docs_honesty.py  test_domains.py  test_extension_schemas.py  test_public_api.py  test_roles.py  test_snapshot.py  test_type_honesty_and_floor.py  test_validator.py
