[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-provider-sdk"
version = "0.1.0"
description = "SDK for building FLUID data product providers — zero dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Agentics AI / DustLabs"},
]
keywords = ["fluid", "data-products", "providers", "sdk", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = []  # Zero dependencies!

[project.urls]
Documentation = "https://agenticstiger.github.io/forge_docs/"
Repository = "https://github.com/Agenticstiger/forge-cli-sdk"
Issues = "https://github.com/Agenticstiger/forge-cli-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
