[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-product-forge-sdk"
version = "0.10.0"
description = "Zero-dependency SDK for building data-product-forge plugins — custom scaffolds, validators, cloud-infrastructure providers, catalog adapters. Import as `fluid_sdk`."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "data-product-forge Community"},
]
keywords = [
    "data-product-forge",
    "fluid",
    "data-products",
    "providers",
    "custom-scaffold",
    "validators",
    "catalog",
    "sdk",
    "plugin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

# Zero external dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Documentation = "https://github.com/Agenticstiger/forge-cli-sdk#readme"
Repository = "https://github.com/Agenticstiger/forge-cli-sdk"
Issues = "https://github.com/Agenticstiger/forge-cli-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fluid_sdk*"]

[tool.setuptools.package-data]
fluid_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.mypy]
python_version = "3.10"
warn_unreachable = true
warn_unused_ignores = true
