[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-ci-scaffold"
version = "0.1.0"
description = "Generates a complete GitLab CI scaffold (README, .gitlab-ci.yml, per-env configs) from a fluid contract"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = ["fluid-sdk>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.entry-points."fluid_build.custom_scaffolds"]
gitlab-ci = "gitlab_ci_scaffold.scaffold:GitLabCIScaffold"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
